--- a/_src/assets/scss/main.scss
+++ b/_src/assets/scss/main.scss
@@ -1,8 +1,4 @@
-@import 'core/settings';
-@import 'core/links';
+@import "core/reset";
+@import "core/settings";
 
-body {
-	background: url('../images/logo-adalab-80px.png') center center no-repeat $color-white;
-	margin: 0;
-	height: 100vh;
-}
+@import "layouts/header";
