--- a/_src/templates/index.html
+++ b/_src/templates/index.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-	<meta charset="UTF-8">
-	<title>Adalab Web Starter Kit</title>
-  <link rel="icon" href="favicon.png"/>
-	<link rel="stylesheet" href="assets/css/main.css">
-</head>
-<body>
-  <div class="page">
-    <partial src="_header.html" label="Header"></partial>
-    <partial src="_main.html" label="Main"></partial>
-    <partial src="_link.html" aClass="link__adalab" text="Adalab" url="https://adalab.es"></partial>
-    <partial src="_link.html" aClass="link__github" text="GitHub" url="https://github.com"></partial>
-  </div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Pokémon Cards Memory Game</title>
+    <link rel="icon" href="./Favicon.png" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Lexend+Deca&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./assets/css/main.css" />
+  </head>
+  <body>
+    <div class="page">
+      <partial src="_header.html" label="Header"></partial>
+      <partial src="_main.html" label="Main"></partial>
+    </div>
+    <script type="text/javascript" src="./assets/js/main.js"></script>
+  </body>
 </html>
