--- a/_src/templates/partials/_header.html
+++ b/_src/templates/partials/_header.html
@@ -1,1 +1,13 @@
-<header class="page__header">@@label</header>
+<header class="header">
+  <img
+    src="./assets/images/pokemon-logo.png"
+    alt="Welcome to Pokémon Cards Memory Game"
+    class="header__cover"
+  />
+  <img
+    src="./assets/images/pikachu.png"
+    alt="Pikachu te saluda"
+    class="header__pikachu"
+  />
+  <h1 class="header__title">El juego de las parejas</h1>
+</header>
