--- a/_src/assets/scss/layouts/_header.scss
+++ b/_src/assets/scss/layouts/_header.scss
@@ -1,9 +1,8 @@
 .header {
   background-color: darkred;
-  padding: 0 15px 0 15px;
 
   &__pikachu {
-    top: 15px;
+    top: 30px;
     margin: 5px 15px 5px 15px;
     position: absolute;
     max-height: 200px;
@@ -16,11 +15,27 @@
     max-height: 100px;
   }
   &__title {
-    padding: 25px;
+    padding: 25px 0 35px 0;
     text-align: center;
     font-family: "Lexend Deca", sans-serif;
     color: white;
     background-color: black;
     border-radius: 50px 50px 0 0;
+  }
+  &__button {
+    border-radius: 50%;
+    border: 6px solid black;
+    background-color: white;
+    position: absolute;
+    z-index: 1;
+    padding: 17px 10px 17px 10px;
+    margin-left: 47%;
+    top: 170px;
+    color: grey;
+    font-family: "Lexend Deca", sans-serif;
+    transition: 0.5s;
+  }
+  &__button:hover {
+    color: darkred;
   }
 }
