--- a/_src/templates/index.html
+++ b/_src/templates/index.html
@@ -13,6 +13,7 @@
   <body>
     <div class="page">
       <partial src="_header.html" label="Header"></partial>
+      <partial src="_form.html" label="Form"></partial>
       <partial src="_main.html" label="Main"></partial>
     </div>
     <script type="text/javascript" src="./assets/js/main.js"></script>
