--- a/_src/templates/partials/_header.html
+++ b/_src/templates/partials/_header.html
@@ -10,4 +10,5 @@
     class="header__pikachu"
   />
   <h1 class="header__title">El juego de las parejas</h1>
+  <button class="header__button">Reset</button>
 </header>
